[package]
name = "server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
snake = { path="../snake" }
log = "0.4.17"
futures-util = "0.3.25"
thiserror = "1.0.37"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-channel = "0.3.25"
