[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
snake = { path="../snake" }
log = "0.4.17"
rand = "0.8.5"
futures-util = "0.3.25"
thiserror = "1.0.37"
anyhow = "1.0.66"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-channel = "0.3.25"
bincode = "1.3.3"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]