[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
rand = "0.8.5"
log = "0.4.17"
anyhow = "1"
futures-channel = "0.3.25"
bevy-inspector-egui = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
