[package]
name = "snake-client"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.9.1"
# bevy-inspector-egui = "0.14.0"
rand = "0.8.5"
snake = { path="../snake" }
log = "0.4.17"
futures-channel = "0.3.25"
anyhow = "1"
bincode = "1.3.3"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]